--- a/src/main/resources/static/css/admin/cs/faq/list.css
+++ b/src/main/resources/static/css/admin/cs/faq/list.css
@@ -1,10 +1,18 @@
 /* 유형선택 */
 .select-container {
     display: flex;
-    gap: 10px; /* 간격을 원하는 만큼 조정 가능 */
+    gap: 10px;
+    padding-top: 15px;
 }
 
-select[name="type"] {
+select[name="type1"] {
+    width: 80px;
+    height: 40px;
+    border: 1px solid #D8D8D8;
+    text-align: center;
+    outline: none;
+}
+select[name="type2"] {
     width: 80px;
     height: 40px;
     border: 1px solid #D8D8D8;
@@ -27,6 +35,7 @@ select[name="type"] {
     text-align: center;
     box-sizing: border-box;
     border-collapse: collapse;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 /*표 상단*/
 .admin_title {
