--- a/src/main/resources/static/css/my/info.css
+++ b/src/main/resources/static/css/my/info.css
@@ -317,21 +317,20 @@ table.widthtable tr:last-child td {
     padding-left: 15px;
 }
 
-.myinfoheighttable tr:nth-child(5) td input {
+.myinfoheighttable .emailinput {
     width: 125px;
 }
 
-.myinfoheighttable tr:nth-child(6) td input {
+.myinfoheighttable .hpinput {
     width: 100px;
 }
 
-.myinfoheighttable tr:nth-child(7) td input:nth-of-type(1) {
+.myinfoheighttable .firstaddr {
     width: 185px;
     margin-bottom: 5px;
 }
 
-.myinfoheighttable tr:nth-child(7) td input:nth-of-type(2),
-.myinfoheighttable tr:nth-child(7) td input:nth-of-type(3) {
+.myinfoheighttable .addrinput {
     margin-bottom: 5px;
     width: 382px;
 }
@@ -371,6 +370,7 @@ table.widthtable tr:last-child td {
 }
 
 .myinfomation input[type="text"],
+.myinfomation input[type="password"],
 .myinfomation select {
     height: 30px;
 }
